v0.13.1
	* FIX : English language warning
    * FIX : proper handling of the "Don't connect GPX nodes..." disabling.
    * FIX : Fit the style editor in 1024x600 resolution (fixes #1609)
    * FIX : Reflect in dirty dock the fact that multiple objects were changed together (fixes #1507)
	* ADD : Threaded browser-based background image grabbing. (fixes #1312)
v0.13
    * FIX : Workaround for a crash with templates on Qt 4.5
	* FIX : Crash after TMS/WMS server renaming (fixes #1634)
	* FIX : Download opaqueness applied to relations (fixes #1637)
	* FIX : Do not zoom out after a viewport download in background projection (fixes #1638)
	* FIX : Remove layer from "downloaded areas" on close (fixes #1636)
	* FIX : Crash on layer close
	* FIX : Hardening upload process
	* FIX : Remove the deleted road from parent when joining
	* FIX : allow to split/join roads belonging to not-completely-downloaded relations
	* FIX : Avert crashes by using guarded pointers
	* FIX : In case of a failed "Download more", do not delete layer if it was a previously existing one.
	* FIX : GeoTagged images are drawn to the full size of GeoImageDock
	* FIX : Background images with a too long hash filename were not cached.
	* FIX : Tracklayers are (after asking the user) made writeable when opening geotagged images to it
	* ADD : Images can be dropped on TrackPoints to add the coordinates from the trackpoint to the image and then load it as geotagged image (see #1602)
	* FIX : trackpoints which are associated with an image are highlighted according to the Style's settings (but not by painting an reactangle in paintEvent manually)
	* FIX : Much better zoom (and image-moving) for ImageView in GeoImageDock
	* FIX : Long image filenames are cutted to fit the GeoImageDock (fixes #1452)
	* FIX : ImageView in GeoImageDock draws images using an antialiasing painter and images are not copied when displaying them which results in faster drawing. (fixes #1452)